# ReinRenderer

./: CMakeLists.txt  README.md  main.cpp  tgaimage.h
src/: geometry.cpp  geometry.h  main.cpp  model.cpp  our_gl.cpp  our_gl.h
